@@ -3,6 +3,7 @@
  * $Id$
  *
  * Copyright (C) 1996-1997  Id Software, Inc.
+ * Copyright (C) 2011-2012 O.Sezer <sezero@users.sourceforge.net>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -35,12 +36,17 @@
 int Thread_GetNumCPUS (void)
 {
 	SYSTEM_INFO info;
+	OSVERSIONINFO vinfo;
 	int numcpus;
+
+	vinfo.dwOSVersionInfoSize = sizeof(vinfo);
+	if (!GetVersionEx (&vinfo))
+		COM_Error ("Couldn't get OS info");
+	if (vinfo.dwMajorVersion < 4 || vinfo.dwPlatformId < VER_PLATFORM_WIN32_NT)
+		return 1;
 	GetSystemInfo(&info);
 	numcpus = info.dwNumberOfProcessors;
-	if (numcpus < 1)
-		numcpus = 1;
-	return numcpus;
+	return (numcpus < 1) ? 1 : numcpus;
 }
 
 #elif defined(__linux__) || defined(__SOLARIS__) || defined(_AIX)
@@ -48,47 +54,38 @@ int Thread_GetNumCPUS (void)
 int Thread_GetNumCPUS (void)
 {
 	int numcpus = sysconf(_SC_NPROCESSORS_ONLN);
-	if (numcpus < 1)
-		numcpus = 1;
-	return numcpus;
+	return (numcpus < 1) ? 1 : numcpus;
 }
 
 #elif defined(__MACOSX__)
 #include <unistd.h>
-#if defined(_SC_NPROCESSORS_ONLN)	/* needs >= 10.5 */
-int Thread_GetNumCPUS (void)
-{
-	int numcpus = sysconf(_SC_NPROCESSORS_ONLN);
-	if (numcpus < 1)
-		numcpus = 1;
-	return numcpus;
-}
-#else	/* no _SC_NPROCESSORS_ONLN: */
 #include <sys/sysctl.h>
-#if defined(HW_AVAILCPU)	/* BSD code, needs >= 10.2 */
+#if !defined(HW_AVAILCPU)	/* using an ancient SDK? */
+#define HW_AVAILCPU		25	/* needs >= 10.2 */
+#endif
 int Thread_GetNumCPUS (void)
 {
-	int numcpus, mib[4];
-	size_t len = sizeof(numcpus);
+	int numcpus;
+	int mib[2];
+	size_t len;
+
+#if defined(_SC_NPROCESSORS_ONLN)	/* needs >= 10.5 */
+	numcpus = sysconf(_SC_NPROCESSORS_ONLN);
+	if (numcpus != -1)
+		return (numcpus < 1) ? 1 : numcpus;
+#endif
+	len = sizeof(numcpus);
 	mib[0] = CTL_HW;
 	mib[1] = HW_AVAILCPU;
 	sysctl(mib, 2, &numcpus, &len, NULL, 0);
-	if (numcpus < 1)
+	if (sysctl(mib, 2, &numcpus, &len, NULL, 0) == -1)
 	{
 		mib[1] = HW_NCPU;
-		sysctl(mib, 2, &numcpus, &len, NULL, 0);
-		if (numcpus < 1)
-			numcpus = 1;
+		if (sysctl(mib, 2, &numcpus, &len, NULL, 0) == -1)
+			return 1;
 	}
-	return numcpus;
+	return (numcpus < 1) ? 1 : numcpus;
 }
-#else	/* no HW_AVAILCPU: */
-int Thread_GetNumCPUS (void)
-{
-	return 1;
-}
-#endif
-#endif	/* Mac OS X versions */
 
 #elif defined(__IRIX__)
 #include <unistd.h>
@@ -101,22 +98,25 @@ int Thread_GetNumCPUS (void)
 }
 
 #elif defined(__FreeBSD__) || defined(__OpenBSD__) || defined(__NetBSD__) || defined(__DragonFly__)
+#include <unistd.h>
 #include <sys/sysctl.h>
 int Thread_GetNumCPUS (void)
 {
-	int numcpus, mib[4];
+	int numcpus;
+	int mib[2];
+	size_t len;
+
+#if defined(_SC_NPROCESSORS_ONLN)
+	numcpus = sysconf(_SC_NPROCESSORS_ONLN);
+	if (numcpus != -1)
+		return (numcpus < 1) ? 1 : numcpus;
+#endif
 	size_t len = sizeof(numcpus);
 	mib[0] = CTL_HW;
-	mib[1] = HW_AVAILCPU;
-	sysctl(mib, 2, &numcpus, &len, NULL, 0);
-	if (numcpus < 1)
-	{
-		mib[1] = HW_NCPU;
-		sysctl(mib, 2, &numcpus, &len, NULL, 0);
-		if (numcpus < 1)
-			numcpus = 1;
-	}
-	return numcpus;
+	mib[1] = HW_NCPU;
+	if (sysctl(mib, 2, &numcpus, &len, NULL, 0) == -1)
+		return 1;
+	return (numcpus < 1) ? 1 : numcpus;
 }
 
 #elif defined(__hpux) || defined(__hpux__) || defined(_hpux)
