@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-09-05 (SVN):
+    * utils/common/threads.c: more GetNumCPUS() fixes for OSX and BSD.
+      also made sure that it returns only 1 on ancient windows versions.
+
+2012-09-05 (SVN):
     * eliminated spaces from macosx binaries names.
     * updated the version date stamp to 2012-09-05.
 
